GNOME Bugzilla – Bug 721027
mfcdec: doesn't work in odroid with kernel 3.8: dequeueing failed in input_dqbuf
Last modified: 2013-12-27 14:52:53 UTC
The mfc video decoder didn't work in my odroid x2 with kernel 3.8. It failed with this error: "Dequeueing failed" in input_dqbuf(). The error was invalid parameter.
Created attachment 264860 [details] [review] add the missing fields to the v4l2_buffer when dequeueing the
Note that the mfc plugin was just a proof of concept and is going to disappear soonish. It doesn't make much sense to continue working on the mfc plugin. The new solution will be a video decoder element that uses the infrastructure from the v4l2 plugin. The current WIP is here http://cgit.collabora.com/git/user/nicolas/gst-plugins-good.git/log/?h=v4l2videodec
I agree on that, I'll take a look to the new v4l2videodec, but I would say, regarding this mfc plugin, that it is better have it functional rather than broken (at least in the odroidx2 kernel 3.8). Besides, the patch is not very intrusive. Happy holidays!
Sure, thanks and thanks for the patch :)
Comment on attachment 264860 [details] [review] add the missing fields to the v4l2_buffer when dequeueing the I tested it and it works on Cotton Candy device
commit dedb95dc6face4941eb674fc79efdc9eb5fa9390 Author: Víctor Manuel Jáquez Leal <vjaquez@igalia.com> Date: Tue Dec 24 23:15:28 2013 +0000 mfc: fix input dequeue for odroid https://bugzilla.gnome.org/show_bug.cgi?id=721027