mfc: fix input dequeue for odroid

https://bugzilla.gnome.org/show_bug.cgi?id=721027